--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "antd": "^4.3.4",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.1.0",
     "react": "^16.13.1",
